# dunetpc

./: CMakeLists.txt  README.md
dune/: CMakeLists.txt
dune/NDFDPairs/: AddFDRecoConfig.fcl  AddFDReco_module.cc  AddFDSEDConfig.fcl  AddFDSED_module.cc  CMakeLists.txt  LoadFDDeposConfig.fcl  LoadFDDepos_module.cc  LoadFDSimChannelsConfig.fcl  LoadFDSimChannels_module.cc
dune/NDFDPairs/run_fcls/: run_AddFDReco.fcl  run_AddFDSED.fcl  run_LoadFDDepos.fcl  run_LoadFDSimChannels.fcl
ndfd_pairs_fcl/: standard_detsim_dune10kt_nooptdetsim.fcl  standard_detsim_dune10kt_nooptdetsim_1x2x6.fcl  standard_g4_dune10kt_1x2x6_wSED.fcl
scripts/: install_ninja.sh  setup.sh  setup_old_cmake.sh
scripts/dev/: build_ninja.sh  setup_new_cmake.sh
scripts/h5_add/: add_h5_ndfdreco.py  setup_h5_add_venv.sh
scripts/jobs/: make_setup_grid.sh  produce_fd_pair_reco_from_simchannels.sh
